Fix alignment and add different texture for small devices

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body,
+#root {
+  display: flex;
+  flex: 1;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
